--- a/final_project.vcxproj
+++ b/final_project.vcxproj
@@ -123,18 +123,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConsistencyChecker.cpp" />
     <ClCompile Include="CourseScheduler.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="GroupManager.cpp" />
     <ClCompile Include="InductionVerifier.cpp" />
     <ClCompile Include="LogicEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Managers.cpp" />
+    <ClCompile Include="MHMUniversitySystem.cpp" />
+    <ClCompile Include="Models.cpp" />
+    <ClCompile Include="Modules.cpp" />
+    <ClCompile Include="ProofGenerator.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConsistencyChecker.h" />
     <ClInclude Include="CourseScheduler.h" />
+    <ClInclude Include="FileManager.h" />
+    <ClInclude Include="Function.h" />
     <ClInclude Include="GroupManager.h" />
     <ClInclude Include="InductionVerifier.h" />
     <ClInclude Include="LogicEngine.h" />
+    <ClInclude Include="Managers.h" />
+    <ClInclude Include="MHMUniversitySystem.h" />
+    <ClInclude Include="Models.h" />
+    <ClInclude Include="Modules.h" />
+    <ClInclude Include="ProofGenerator.h" />
     <ClInclude Include="Relation.h" />
     <ClInclude Include="SetOperations.h" />
     <ClInclude Include="Utils.h" />
